<resources>
    <string name="app_name">SDMobile</string>
    <string name="Usuario">Usuário</string>
    <string name="Senha">Senha</string>
    <string name="Entrar">Entrar</string>
    <string name="NovoChamado">Novo Chamado</string>
    <string name="VisualizarChamados">Visualizar Chamados</string>
    <string name="Titulo">Título</string>
    <string name="Mensagem">Mensagem</string>
    <string name="Enviar">Enviar</string>
    <string name="Sair">Sair</string>
</resources>
