<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="368dp"
    android:layout_height="495dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:src="@drawable/sdmobile_logo" android:layout_gravity="center" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bem-vindo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.10"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btNovoChamado"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_border"
        android:onClick="novoChamado"
        android:text="@string/NovoChamado"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btVisChamados"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_border"
        android:onClick="visualizarChamados"
        android:text="@string/VisualizarChamados"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btSair"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_border"
        android:onClick="retornarActivityLogin"
        android:text="@string/Sair"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        />

</LinearLayout>
