<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:androind="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    android:weightSum="1"

    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:src="@drawable/sdmobile_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/Usuario"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/lbUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/Senha"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/lbSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:background="@drawable/screen_border"
        android:onClick="logarUsuario"
        android:text="@string/Entrar"
        android:textColor="#ffffff"

        />

</LinearLayout>

